# tidygraphtool

./: .gitignore  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  gt.yml  meta.yaml  requirements.txt  setup.cfg  setup.py  tidy_gt.yml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/tidygraphtool/: __init__.py  all.py  as_data_frame.py  augment.py  centrality.py  cli.py  context.py  graph_measures.py  group.py  gt_graph.py  node.py  pipes.py  play.py  state.py  verbs.py  verbs_dataframe.py
tests/: __init__.py  test_as_data_frame.py  test_augment.py  test_centrality.py  test_group.py  test_gt_graph.py  test_play.py  test_tidygraphtool.py  test_verbs.py
tidygraphtool/: GT_graph2.py  all.py  as_data_frame.py  augment.py  centrality.py  chains.py  cli.py  context.py  edgedataframe.py  graph_measures.py  group.py  gt_graph.py  networkx.py  node.py  nodedataframe.py  play.py  state.py  tidygraphtool.py  utils.py  verbs.py  verbs_dataframe.py  with_array.py
vignettes/: hsbm-tutorial.ipynb
